fix: set width for game-stat-section
bug fixed: div was added in the upload tournament button PR but the width was not set so it was too small (it now matches the original analytics page styling)

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -598,6 +598,10 @@ html, body {
     font-weight: 700;
 }
 
+.game-stat-section{
+    width: 80%;
+}
+
 /* New Tournament Page */
 .tourneyHeader {
     display: flex;
